--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
   "name": "pagination-ross",
-  "version": "1.0.0",
+  "version": "1.0.2",
+  "description": "Pagination-ross is a lightweight and flexible pagination component designed for React applications. It gives developers full control over styling without enforcing any default look, making it perfect for clean, customizable UIs",
+  "homepage": "https://pagination-ross-demo.pages.dev",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Ross1736/pagination-ross"
+  },
   "main": "dist/index.js",
   "module": "dist/index.es.js",
   "types": "dist/index.d.ts",
